# mymemex

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  SUPPORTERS.md  TODO.md  alembic.ini  docker-compose.demo.yml  docker-compose.full.yml  docker-compose.private.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker.yml
alembic/: env.py
config/: config.example.yaml
docs/: ARCHITECTURE-CONSTRAINTS.md  ARCHITECTURE.md  DEPLOYMENT-DEMO.md  DEPLOYMENT-SPECIFICATION.md  DISCORD-SETUP.md  DOMAIN-AVAILABILITY.md  EMAIL-SIGNUP-SETUP.md  INSTALLATION.md  M10-DEPLOYMENT-OPTIONS.md  M11-SPEC.md  MACOS-APP-ANALYSIS.md  MCP-SPEC.md  MILESTONES.md  MONETIZATION-STRATEGY.md  MULTI-USER-SPEC.md  NAME-BRAINSTORM.md  PRD.md  PROMPT-CLAUDE-REVIEW-MCP.md  PROMPT-COMPLETE-REBRAND.md  PROMPT-FEATURES-SPEC.md  PROMPT-JOYWAREAPPS-WEBSITE.md  PROMPT-M1-M4.md  PROMPT-M10-DEPLOYMENT.md  PROMPT-M10-STRUCTURED-EXTRACTION-REVIEW.md  PROMPT-M5-OCR.md  PROMPT-M6-EMBEDDINGS.md  PROMPT-M6.5-SERVICE-LAYER.md  PROMPT-M7-MCP-SERVER.md  PROMPT-M7.5-LIBRARIAN-SKILL.md  PROMPT-M8-WEB-UI.md  PROMPT-M9-AUTO-TAGGING.md  PROMPT-M9.5-STRUCTURED-EXTRACTION.md  PROMPT-MCP-EVALUATION.md  PROMPT-MILESTONES-UPDATE.md  PROMPT-QOL-TITLE-EXTRACTION.md  PROMPT-QOL-UPLOAD-SEMAPHORE.md  PROMPT-UPDATE-SPECS.md  PROMPT-WEBSITE-REBRAND.md  README-SUPPORT-SECTION.md  REBRAND-CHECKLIST.md  (+8 more)
docs/planned/: DEMO-DATA-GENERATOR.md  DISCORD-SETUP.md  MACOS-APP-ANALYSIS.md  MONETIZATION-STRATEGY.md  MULTI-USER-SPEC.md  PROMPT-DEMO-VERSION.md
docs/to-review/: PRD.md
scripts/: deploy-demo-fast.sh  deploy-demo.sh  deploy-private.sh  reset_db.sh  run-integration-tests.sh  run-ocr-tests.sh  seed_demo_data.py
skills/librarian/: SKILL.md
skills/librarian/assets/: claude-desktop-config.json  openclaw-config.yaml
skills/librarian/references/: configuration.md  examples.md  mcp-tools.md
skills/librarian/scripts/: check_server.py  quick_search.py  test_connection.py
skills/mymemex/: SKILL.md
skills/mymemex/assets/: claude-desktop-config.json  openclaw-config.yaml
skills/mymemex/references/: configuration.md  examples.md  mcp-tools.md
skills/mymemex/scripts/: check_server.py  quick_search.py  test_connection.py
src/librarian/: __init__.py  __main__.py  app.py  config.py
src/librarian/api/: documents.py  router.py  search.py  system.py  tags.py
src/librarian/cli/: backup.py
src/librarian/core/: events.py  queue.py  scheduler.py  watcher.py
src/librarian/intelligence/: classifier.py  embedder.py  llm_client.py  pipeline.py
src/librarian/mcp/: __init__.py  resources.py  server.py  tools.py
src/librarian/processing/: ocr.py  pipeline.py
src/librarian/services/: classification.py  extraction.py  ingest.py  search.py  stats.py  tag.py
src/librarian/storage/: database.py  models.py  repositories.py  vector_store.py
src/librarian/web/: __init__.py  router.py
src/mymemex/: __init__.py  __main__.py  app.py  config.py
src/mymemex/api/: auth.py  documents.py  router.py  (+2 more)
tests/: .gitignore  conftest.py  test_api.py  test_auth.py  test_auth_middleware.py  test_backup.py  test_chunker.py  test_classification.py  test_concurrency.py  test_config.py  test_database.py  test_embedder.py  test_extraction.py  test_extractor.py  test_hasher.py  test_mcp.py  test_ocr.py  test_ocr_integration.py  test_ollama_integration.py  test_processing_pause.py  test_queue.py  test_routing.py  test_semantic_search_e2e.py  test_vector_store.py  test_web.py
tests/fixtures/: README.md
website/: CLAUDE-UPDATE.md  PROMPT-UPDATE-WEBSITE.md  README.md  package-lock.json  package.json  update-website-mymemex.sh  update-website.sh
workers/: README.md  subscribe.js  wrangler.toml
(+85 files in other folders)
