[project]
name = "mymemex"
version = "0.1.0"
description = "Your AI Document Memory - Self-hosted document intelligence with semantic search"
authors = [
    { name = "Goran Obradovic (Joyware Apps)", email = "support@joywareapps.com" },
]
requires-python = ">=3.10"

dependencies = [
    # Core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "typer>=0.15",
    "rich>=13.9",
    "structlog>=25.1",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "aiosqlite>=0.20",

    # File handling
    "watchdog>=6.0",
    "python-magic>=0.4.27",
    "xxhash>=3.5",
    "pymupdf>=1.25",
    "pillow>=11.0",
    "ftfy>=6.3",

    # HTTP client (for future LLM calls)
    "httpx>=0.28",

    # YAML config
    "pyyaml>=6.0",

    # File uploads
    "python-multipart>=0.0.18",

    # Web UI templates
    "jinja2>=3.1",

    # Backup schedule validation (optional, gracefully skipped if absent)
    "croniter>=1.3",

    # Authentication (M12)
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
]

[project.urls]
Homepage = "https://mymemex.io"
Repository = "https://github.com/joywareapps/mymemex"
Issues = "https://github.com/joywareapps/mymemex/issues"
Documentation = "https://github.com/joywareapps/mymemex#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]
ocr = [
    "pytesseract>=0.3",
]
ai = [
    "chromadb>=0.6",
]
mcp = [
    "mcp>=1.26",
]
demo = [
    "faker>=33.0",
    "fpdf2>=2.8",
]

[project.scripts]
mymemex = "mymemex.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mymemex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: Tests that require live Ollama instance (run with OLLAMA_API_BASE set)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
